first and drag examples in the data

--- a/examples/first_browser/index.html
+++ b/examples/first_browser/index.html
@@ -78,7 +78,7 @@ body {
   <!-- Could the browser itself leverage a framework like YUI or jquery?
        This shouldn't be that much different than slamming YUI into node.js
        or jquery into jetpacks? -->
-  <script type="text/javascript" src="jquery-min.js"></script>
+  <script type="text/javascript" src="../script/jquery-min.js"></script>
   <script type="text/javascript">
 
 // the ready handler would run once the browser process was initialized?
