--- a/extension/chromeless/data/drag_browsers/index.html
+++ b/extension/chromeless/data/drag_browsers/index.html
@@ -39,7 +39,7 @@ body {
   border: 1px solid green;
 }
 
-#contentFrame {
+.contentFrame {
   border: 1px solid blue;
   box-flex: 1;
   -moz-box-flex: 1;
@@ -47,6 +47,12 @@ body {
   width: 100%;
   height: 100%;
 }
+
+#browser_a { 
+	float:left; 
+} 
+#browser_b { 
+} 
 
 #outer {
   margin: 0;
@@ -71,7 +77,8 @@ body {
       <!-- what if iframes were how the browser HTML embedded web content?
            what if a new attribute were introduced which controlled priviledge
            level of content loaded in an iframe? --> 
-      <iframe id="contentFrame" src="http://google.com/" privilege="content"></iframe>
+      <iframe class='contentFrame' id="browser_a" src="http://google.com/" privilege="content"></iframe>
+      <iframe class="contentFrame" id='browser_b" src="http://google.com/" privilege="content"></iframe>
     </div>
     </div>
   </body>
