--- a/extension/chromeless/data/drag_browsers/index.html
+++ b/extension/chromeless/data/drag_browsers/index.html
@@ -78,14 +78,14 @@ body {
            what if a new attribute were introduced which controlled priviledge
            level of content loaded in an iframe? --> 
       <iframe class='contentFrame' id="browser_a" src="http://google.com/" privilege="content"></iframe>
-      <iframe class="contentFrame" id='browser_b" src="http://google.com/" privilege="content"></iframe>
+      <iframe class='contentFrame' id="browser_b" src="http://etherpad.mozilla.com:9000/chromeless-browser" privilege="content"></iframe>
     </div>
     </div>
   </body>
   <!-- Could the browser itself leverage a framework like YUI or jquery?
        This shouldn't be that much different than slamming YUI into node.js
        or jquery into jetpacks? -->
-  <script type="text/javascript" src="jquery-min.js"></script>
+  <script type="text/javascript" src="../script/jquery-min.js"></script>
   <script type="text/javascript">
 
 // the ready handler would run once the browser process was initialized?
