Fix to the sample to use -moz properties towards flex-box - http://www.w3.org/TR/css3-flexbox/#overview

--- a/extension/chromeless/data/drag_browsers/index.html
+++ b/extension/chromeless/data/drag_browsers/index.html
@@ -49,9 +49,12 @@ body {
 }
 
 #browser_a { 
-	float:left; 
+  display: -moz-box;
+        -moz-box-flex: 1;
 } 
 #browser_b { 
+  display: -moz-box;
+        -moz-box-flex: 1;
 } 
 
 #outer {
