remove ugly resource urls and use relative pathing instead:

--- a/ui/thumbnails/index.html
+++ b/ui/thumbnails/index.html
@@ -116,7 +116,7 @@ body {
   <!-- Could the browser itself leverage a framework like YUI or jquery?
        This shouldn't be that much different than slamming YUI into node.js
        or jquery into jetpacks? -->
-  <script type="text/javascript" src="resource://jid0-ve0baysox4snijgmmjrgl4kfm2w-chromeless-data/thumbnails/jquery-min.js"></script>
+  <script type="text/javascript" src="jquery-min.js"></script>
   <script type="text/javascript">
 
 var currentBrowser = null; 
