Changed to work in relative path and to build the "target directory app" in the output build file. This works but it fails to clean the directory. So notice this version, when you use -package, will produce a ZIP file properly but will also cause a residual directory in the ./template. This file needs to be erased. The patch is not here yet because the cuddlefish.run runs asynchronously. So maybe is simpler to hack the cuddlefish.xpi to build the ZIP taking the file into account in ZIP build time and avoid this whole python-based file copy.

--- a/tests/xpcom/index.html
+++ b/tests/xpcom/index.html
@@ -32,6 +32,7 @@
 
    <h3>This iframe loads the inner-page using resource:// protocol, so far passing the whole Jetpack app id resource://jid0-ve0baysox4snijgmmjrgl4kfm2w-chromeless-data/inner-page.html so expect the xpcom test to fail. </h3>
 
+   <iframe src="file:///Users/marciogalli/Desktop/chromeless/mozilla/marcio/chromeless/tests/xpcom/inner-page.html" width="400" height="100" border="2" >
    <iframe src="resource://jid0-ve0baysox4snijgmmjrgl4kfm2w-chromeless-data/xpcom/inner-page.html" width="400" height="100" border="2" >
    </iframe>
 
